# clap-ipc

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  release-please-config.json
.github/workflows/: ci.yml  release.yml
src/: audio_backend.h  backend_capture.cpp  backend_portaudio.cpp  config.h  control_server.cpp  control_server.h  dl_compat.h  echo_ring.h  event_route.cpp  event_route.h  graph.cpp  graph.h  graph_swap.cpp  graph_swap.h  host_context.cpp  host_context.h  invariants.h  main.cpp  net_compat.h  notification_center.cpp  notification_center.h  plugin_node.cpp  plugin_node.h  rt_policy.h  rt_policy_linux.cpp  rt_policy_macos.cpp  rt_policy_win.cpp  shm_host.cpp  shm_host.h  shm_host_win.cpp  track_render.cpp  track_render.h
